# Ai-agent

./: .env.example  .gitignore  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
docs/guide/: 01-getting-started.md  02-configuration.md  03-multi-agent.md  04-roles-permissions.md  05-automation.md  05-mcp-server.md  06-updating.md  07-troubleshooting.md  08-roadmap.md  09-persona-skills.md
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
skills_library/code_review/: SKILL.md
skills_library/meeting_summary/: SKILL.md
src/nexus/: __init__.py  runtime.py
src/nexus/core/: __init__.py  agent.py  config.py  context.py
src/xplogent/: __init__.py  __main__.py  runtime.py
tests/: conftest.py  test_agent.py  test_analytics_api.py  test_backends.py  test_background_delegate.py  test_backup.py  test_budget.py  test_canvas.py  test_chat_reliability.py  test_config_io.py  test_council.py  test_data_path.py  test_delegate.py  test_evals.py  test_extension.py  test_fts.py  test_gen_params.py  test_graph.py  test_image_chat.py  test_mcp_server.py  test_memory.py  test_memory_tool.py  test_messaging.py  test_monitor.py  test_operator.py  test_orchestrator.py  test_permissions.py  test_persona.py  test_platform.py  test_provider_models.py  test_providers_new.py  test_rag.py  test_retry.py  test_safety.py  test_scheduler.py  test_secrets.py  test_security_api.py  test_self_improve.py  test_service.py  test_service_update.py  (+12 more)
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: AgentCard.tsx  App.tsx  Council.tsx  Guide.tsx  Markdown.tsx  MessageFeed.tsx  MissionControl.tsx  ModelBar.tsx  Schedules.tsx  Settings.tsx  TaskBoard.tsx  UpdatePanel.tsx  api.ts  main.tsx  styles.css
(+131 files in other folders)
