[project]
name = "nexus-agent"
version = "0.1.0"
description = "Nexus — a self-improving, multi-provider AI agent framework with memory and full PC control."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mubashiribstec" }]
keywords = ["ai", "agent", "llm", "ollama", "memory", "automation", "mcp"]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
# Hosted providers (optional — Ollama works with the base install)
providers = [
    "openai>=1.30",
    "anthropic>=0.34",
]
# Full PC control
control = [
    "pyautogui>=0.9.54",
    "mss>=9.0",
    "playwright>=1.44",
]
# Local embeddings for memory (offline)
memory = [
    "sqlite-vec>=0.1.1",
    "sentence-transformers>=3.0",
]
# REST/WebSocket API + web dashboard backend
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]
# Voice interface
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "pyttsx3>=2.90",
]
# Plugins / MCP
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "nexus-agent[providers,control,memory,api,voice,mcp,dev]",
]

[project.scripts]
nexus = "nexus.interfaces.cli.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
